# SimpleHttpServer

./: .directory  .gitignore  CMakeLists.txt  DatabaseHandler.cpp  DatabaseHandler.hpp  DynamicHtml.cpp  DynamicHtml.hpp  HttpHandler.cpp  HttpHandler.hpp  SimpleHttpServer.cpp  SimpleHttpServer.hpp  main.cpp
www/: favicon.icon  files.html  home.html  layout.css  log.html  log.js  newFile.txt  projects.html
www/css/: layout.css
www/files/txtFolder/: a.txt  b.txt
www/js/: files.js  log.js
www/photoFolder/: .R6lJpMc.txt.swp
www/txtFolder/: c.txt
